--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+       <div class="title-and-icon">
+        <img src="./assets/poop.png" class="poop-icon">
+      <h1 class="app-title">Doo &middot; It</h1>
+      </div>
+    </header>
+    <div class="app-content">
+      <div class="sidebar">
+        <button class="add-task">Add new task</button>
+        <button class="all-tasks-button">All Tasks</buttton>
+        <button class="project-button">Projects</button>
+      </div>
+      <div class="task-container">
+        <h1 class="task-container-header">All Tasks</h1>
+        <div class="task">This is where tasks go</div>
+        <div class="task">This is where tasks go</div>
+        <div class="task">This is where tasks go</div>
+        <div class="task">This is where tasks go</div>
+        <div class="task">This is where tasks go</div>
+      </div>
+    </div>
+    <footer>
+        <div class="odin-blurb">Created by Jessi B. for the Odin Project</div>
+    </footer>
+  </body>
 </html>
