Style sidebar with fonts and icons
Style the sidebar by adjusting the font size, style, and weight,
adding icons, and flexing the display to enhance UI.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>doo &middot; it</title>
   </head>
   <body>
     <header>
@@ -13,17 +13,24 @@
     </header>
     <div class="app-content">
       <div class="sidebar">
-        <button class="add-task">Add new task</button>
-        <button class="all-tasks-button">All Tasks</buttton>
-        <button class="project-button">Projects</button>
+        <button class="add-task-button">
+            <img src="./assets/add.png" class="sidebar-icon add-icon" alt="Add icon">Add new task</button>
+        <button class="all-tasks-button">
+            <img src="./assets/all-tasks.png" class="sidebar-icon all-tasks-icon" alt="All tasks icon">
+            All Tasks</buttton>
+        <button class="project-button">
+            <img src="./assets/right-arrow.png" class="sidebar-icon right-arrow" Alt="Arrow to expand projects list">Projects
+            </button>
       </div>
       <div class="task-container">
         <h1 class="task-container-header">All Tasks</h1>
+        <div class="task-container-grid">
         <div class="task">This is where tasks go</div>
         <div class="task">This is where tasks go</div>
         <div class="task">This is where tasks go</div>
         <div class="task">This is where tasks go</div>
         <div class="task">This is where tasks go</div>
+        </div>
       </div>
     </div>
     <footer>
