Add projects to sidebar
Write functions/event listener that loops through an array of all
project names and displays them as buttons on the sidebar.

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
       </div>
     </header>
     <div class="app-content">
-      <div class="sidebar">
+      <div class="sidebar" id="sidebar">
         <button class="add-task-button">
             <img src="./assets/add.png" class="sidebar-icon add-icon" alt="Add icon">Add new task</button>
         <button class="all-tasks-button">
             <img src="./assets/all-tasks.png" class="sidebar-icon all-tasks-icon" alt="All tasks icon">
             All Tasks</buttton>
-        <button class="project-button">
+        <button class="project-button" id="project-dropdown-button">
             <img src="./assets/right-arrow.png" class="sidebar-icon right-arrow" Alt="Arrow to expand projects list">Projects
             </button>
       </div>
