Write function to check projectDiv existence
Write a function in project-dom.js that checks for the existence of
"projectDiv" within the DOM sidebar element.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <button class="all-tasks-button">
             <img src="./assets/all-tasks.png" class="sidebar-icon all-tasks-icon" alt="All tasks icon">
             All Tasks</buttton>
-        <button class="project-button" id="project-dropdown-button">
+        <button class="project-dropdown-button" id="project-dropdown-button">
             <img src="./assets/right-arrow.png" class="sidebar-icon right-arrow" Alt="Arrow to expand projects list">Projects
             </button>
       </div>
