--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,25 @@
         <button class="all-tasks-button">
             <img src="./assets/all-tasks.png" class="sidebar-icon all-tasks-icon" alt="All tasks icon">
             All Tasks</button>
-        <dialog id="new-task-dialog">
+        <dialog class="dialog" id="new-task-dialog">
+          <button class="dialog-exit" id="dialog-exit">X</button>
           <form id="new-task-form">
-            <h1>New Task</h1>
+            <h1 class="dialog-header">New Task</h1>
             <div class="dialog-input">
-              <label for="title">Title</label>
+              <label class="dialog-label" for="title">Title</label>
               <input type="text" id="title" name="title" required>
             </div>
              <div class="dialog-input">
-              <label for="description">Description</label>
-              <input type="text" id="description" name="description" required>
+              <label class="dialog-label" for="description">Description</label>
+              <textarea id="description" name="description" rows="10" cols="50" required></textarea>
             </div>
+            <div class="dialog-selector-div">
              <div class="dialog-input">
-              <label for="title">Date</label>
+              <label class="dialog-label" for="title">Date</label>
               <input type="date">
             </div>
-             <div class="dialog-input">
-              <label for="priority">Priority</label>
+            <div class="dialog-input">
+              <label class="dialog-label" for="priority">Priority</label>
               <select id="priority" name="priority">
                 <option value="low">Low</option>
                 <option value="medium">Medium</option>
@@ -42,12 +44,12 @@
                 </select>
             </div>
              <div class="dialog-input">
-              <label for="project">Project</label>
+              <label class="dialog-label" for="project">Project</label>
               <select id="project" name="project">
                 <option value="project">Projects will go here</option>
                </select>
             </div>
-             <button class="form-submit">+</button>
+             <button class="form-submit">Add</button>
           </form>
         </dialog>
         <button class="project-dropdown-button" id="project-dropdown-button">
