Write event listener for "add task" button/form
Write an event listener that adds a new task to the task library upon
hitting the submit button. This is done by umporting and calling
addTaskToLibrary().

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             <div class="dialog-selector-div">
              <div class="dialog-input">
               <label class="dialog-label" for="title">Date</label>
-              <input type="date">
+              <input type="date" id="date">
             </div>
             <div class="dialog-input">
               <label class="dialog-label" for="priority">Priority</label>
@@ -49,7 +49,7 @@
                 <option value="project">Projects will go here</option>
                </select>
             </div>
-             <button class="form-submit">Add</button>
+             <button class="form-submit" type="submit">Add</button>
           </form>
         </dialog>
         <button class="project-dropdown-button" id="project-dropdown-button">
