Write removeTask() in task-library.js
Write removeTask() to filter through the local storage task library
and remove a task based on its UUID.

The task library array and related functions have been deleted and
replaced with counterparts that work using local storage rather than
an array of objects stored within a JS module.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
        <div class="title-and-icon">
-        <img src="./assets/poop.png" class="poop-icon">
+        <img src="./assets/poop.png" class="poop-icon" id="poop">
       <h1 class="app-title">Doo &middot; It</h1>
       </div>
     </header>
