Write function to display task card on saveTask()
Create task-card-display.js which stores all functions related to
manipulating the task card display in the DOM. Create a function that
takes each property of a task object as its parameter and generates
a task card using this information. At this point, the task card is
unstyled and lacks edit/delete buttons.

--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,7 @@
       </div>
       <div class="task-container">
         <h1 class="task-container-header">All Tasks</h1>
-        <div class="task-container-grid">
-        <div class="task">This is where tasks go</div>
-        <div class="task">This is where tasks go</div>
-        <div class="task">This is where tasks go</div>
-        <div class="task">This is where tasks go</div>
-        <div class="task">This is where tasks go</div>
+        <div class="task-container-grid" id="task-container-grid">
         </div>
       </div>
     </div>
