--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
        <div class="title-and-icon">
-        <img src="./assets/poop.png" class="poop-icon" id="poop">
+        <img src="./assets/poop.png" class="poop-icon" id="poop" alt="A silly smiling poop">
       <h1 class="app-title">Doo &middot; It</h1>
       </div>
     </header>
@@ -30,7 +30,6 @@
               <label class="dialog-label" for="description">Description</label>
               <textarea id="description" name="description" rows="10" cols="50" required></textarea>
             </div>
-            <div class="dialog-selector-div">
              <div class="dialog-input">
               <label class="dialog-label" for="title">Date</label>
               <input type="date" id="date">
@@ -65,5 +64,38 @@
     <footer>
         <div class="odin-blurb">Created by Jessi B. for the Odin Project</div>
     </footer>
+    <dialog class="dialog" id="edit-task-dialog">
+          <button class="dialog-exit" id="edit-dialog-exit">X</button>
+          <form id="edit-task-form">
+             <h1 class="dialog-header">Edit Task</h1>
+            <div class="dialog-input">
+              <label class="dialog-label" for="edit-title">Title</label>
+              <input type="text" id="edit-title" name="edit-title" required>
+            </div>
+             <div class="dialog-input">
+              <label class="dialog-label" for="edit-description">Description</label>
+              <textarea id="edit-description" name="edit-description" rows="10" cols="50" required></textarea>
+            </div>
+             <div class="dialog-input">
+              <label class="dialog-label" for="edit-date">Date</label>
+              <input type="date" name="edit-date" id="edit-date" required>
+            </div>
+            <div class="dialog-input">
+              <label class="dialog-label" for="edit-priority">Priority</label>
+              <select id="edit-priority" name="edit-priority" required>
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+                </select>
+            </div>
+             <div class="dialog-input">
+              <label class="dialog-label" for="edit-project">Project</label>
+              <select id="edit-project" name="edit-project" required>
+                <option value="project">Projects will go here</option>
+               </select>
+            </div>
+             <input class="form-submit" id="edit-task-submit-button" type="submit">Save</button>
+          </form>
+        </dialog>
   </body>
 </html>
