Write functionality for editTaskWithFormData()
Write aforementioned functionality: this function pulls an id and saved
form data from local storage. It destructures the parsed form data, then
sends the id and parsed data as parameters through editTask(). This
then updates the task in the local storage task database. It does
not yet affect the DOM task card display.

--- a/src/index.html
+++ b/src/index.html
@@ -69,28 +69,28 @@
           <form id="edit-task-form">
              <h1 class="dialog-header">Edit Task</h1>
             <div class="dialog-input">
-              <label class="dialog-label" for="edit-title">Title</label>
-              <input type="text" id="edit-title" name="edit-title" required>
+              <label class="dialog-label" for="editTitle">Title</label>
+              <input type="text" id="editTitle" name="editTitle" required>
             </div>
              <div class="dialog-input">
               <label class="dialog-label" for="edit-description">Description</label>
-              <textarea id="edit-description" name="edit-description" rows="10" cols="50" required></textarea>
+              <textarea id="editDescription" name="editDescription" rows="10" cols="50" required></textarea>
             </div>
              <div class="dialog-input">
-              <label class="dialog-label" for="edit-date">Date</label>
-              <input type="date" name="edit-date" id="edit-date" required>
+              <label class="dialog-label" for="editDate">Date</label>
+              <input type="date" name="editDate" id="editDate" required>
             </div>
             <div class="dialog-input">
-              <label class="dialog-label" for="edit-priority">Priority</label>
-              <select id="edit-priority" name="edit-priority" required>
+              <label class="dialog-label" for="editPriority">Priority</label>
+              <select id="editPriority" name="editPriority" required>
                 <option value="low">Low</option>
                 <option value="medium">Medium</option>
                 <option value="high">High</option>
                 </select>
             </div>
              <div class="dialog-input">
-              <label class="dialog-label" for="edit-project">Project</label>
-              <select id="edit-project" name="edit-project" required>
+              <label class="dialog-label" for="editProject">Project</label>
+              <select id="editProject" name="editProject" required>
                 <option value="project">Projects will go here</option>
                </select>
             </div>
